# crafting_test_driven_software_with_python

./: README.md  pyproject.toml
ch1/: test_automatictests.py  test_tdd.py
ch2/: test_acceptance.py
robot_e2e/: hellotest.robot  log.html  output.xml  report.html  searchgoogle.robot
todo/src/todo/: app.py
todo/tests/: test_acceptance.py
