[tool.poetry]
name = "crafting_test_driven_software_with_python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
robotframework = "^4.1.1"
robotframework-seleniumlibrary = "^5.1.3"
webdrivermanager = "^0.10.0"
robotframework-screencaplibrary = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
